# AHKMiniIDE

./: .gitignore  README.md  pyproject.toml  run.py
ahk_mini_ide/: __init__.py  __main__.py  app.py  settings.py  settings_dialog.py
ahk_mini_ide/editor/: editor_widget.py  output_pane.py  runner.py  syntax.py
ahk_mini_ide/hotkeys/: codegen.py  global_hotkeys.py
ahk_mini_ide/inspector/: inspector_widget.py  win_info.py
ahk_mini_ide/project/: explorer.py  manager.py
tests/: test_smoke.py
